Ajout balise meta + correction contraste bouton filtre TOUS pour score Wave

--- a/assets/bootstrap/bootstrap.css
+++ b/assets/bootstrap/bootstrap.css
@@ -6060,7 +6060,7 @@ textarea.form-control-lg {
   justify-content: center;
   width: 15%;
   padding: 0;
-  color: #fff;
+  color: #404040;
   text-align: center;
   background: none;
   border: 0;
